# rust_projects

auth_service/: .gitignore  Cargo.toml  policy.json  policy.rhai
auth_service/docs/: README.md  authorization-models.md  best-practices.md  current-state.md  implementation-checklist.md  implementation-plan.md  jwt-and-tokens.md  oauth2.md  openid-connect.md  production-roadmap.md  protocols-summary.md  rust-libraries.md  saml2.md  security-architecture-summary.md  sessions-and-cookies.md  static-linking.md  webauthn-passkeys.md
auth_service/migrations/: 0001_init.sql
auth_service/src/: config.rs  error.rs  http.rs  lib.rs  main.rs  policy.rs  server.rs
auth_service/src/adapters/: mod.rs
auth_service/src/adapters/crypto/: argon2_password.rs  mod.rs  random_token.rs
auth_service/src/adapters/persistence/: memory.rs  mod.rs  postgres.rs  sqlite.rs  surrealdb.rs  unsupported.rs
auth_service/src/application/: mod.rs
auth_service/src/domain/: mod.rs
auth_service/src/ports/: clock.rs  mod.rs  password.rs  repository.rs  token.rs
auth_service/tests/: auth_flows.rs  http_e2e.rs  sqlite_auth_flows.rs  sqlite_repository_contract.rs
backend/axum_demo/: Cargo.toml  data.json
backend/axum_demo/src/: main.rs
backend/grpc-project/: Cargo.toml  build.rs  test.sh
backend/grpc-project/proto/: hello.proto
black_hole_simulation/: Cargo.toml
black_hole_simulation/src/: main.rs
clitools/ffinder/: Cargo.toml
clitools/ffinder/src/: main.rs
clitools/game_of_life_tui/: Cargo.toml
clitools/game_of_life_tui/src/: main.rs
clitools/passgen/: passwords_max.txt
clitools/passgen/src/: config.rs  generator.rs  main.rs  random.rs
clitools/portscan/: Cargo.toml  com.txt  port.txt
clitools/portscan/src/: main.rs
clitools/rust_scanner/: Cargo.toml
clitools/rust_scanner/src/: events.rs  main.rs  network.rs  scanner.rs  ui.rs
clitools/tfinder/: Cargo.toml
clitools/tfinder/src/: main.rs
clitools/word_counter/src/: main.rs
clitools/word_counter_parallel_all/: Cargo.toml
clitools/word_counter_parallel_all/src/: main.rs
digit_ident/: Cargo.toml  README.md
digit_ident/.orcode/: config.json
digit_ident/.orcode/debug/: 2026-05-09T05-34-38-475Z-7c8e4694-stream.jsonl  2026-05-09T05-51-25-800Z-0f8ebe2f-stream.jsonl  2026-05-09T10-44-57-070Z-885dcb11-stream.jsonl
digit_ident/.orcode/sessions/: 2026-05-09T05-34-38-475Z-7c8e4694.jsonl  2026-05-09T05-34-38-475Z-7c8e4694.state.json  2026-05-09T05-51-25-800Z-0f8ebe2f.jsonl  2026-05-09T09-33-15-068Z-449864c7.jsonl  2026-05-09T10-44-57-070Z-885dcb11.jsonl  2026-05-09T10-44-57-070Z-885dcb11.state.json
digit_ident/ai_doc/: README.md  data_prep.md  experiment_tracking.md  getting_started.md  ml_libs.md  usage_patterns.md
digit_ident/src/: data_loader.rs  main.rs  nn.rs
dioxus_demo/: Cargo.toml
dioxus_demo/src/: main.rs
file_dedup/: Cargo.toml
file_dedup/src/: main.rs
games/life_egui/: Cargo.toml
games/life_egui/src/: main.rs
games/tui_snake/: Cargo.toml
games/tui_snake/src/: main.rs
im-rs/: Cargo.toml
im-rs/src/: lib.rs  main.rs  presets.rs  processor.rs  utils.rs
lernloco/: Cargo.toml
lernloco/config/: development.yaml  test.yaml
lernloco/examples/: playground.rs
lernloco/src/initializers/: view_engine.rs
lernloco/tests/models/: users.rs
lernloco/tests/requests/: auth.rs  prepare_data.rs
mnist-recognition/: Cargo.toml
mnist-recognition/src/: inference.rs  main.rs  preprocess.rs
mnist_fastapi/: server.py
my_graphics/: Cargo.toml
my_graphics/src/: main.rs
notes-roles/: go.mod  go.sum  main.go  notes.db
notes-roles/db/: database.go
notes-roles/handlers/: admin.go  auth.go  notes.go
notes-roles/middleware/: auth.go
notes-roles/models/: models.go
notes-roles/templates/: admin_users.html  dashboard.html  layout.html  login.html  notes.html  register.html
other/black_hole_simulation/: Cargo.toml
other/raycaster_demo/src/: main.rs
other/shake_torch/: Cargo.toml
other/shake_torch/src/: main.rs
other/websocket_demo/: Cargo.toml  test.sh
other/websocket_demo/src/: client.rs  main.rs  server.rs
quic-socks/: Cargo.toml
quic-socks/src/: lib.rs
quick_vpn/: Cargo.toml
quick_vpn/docs/: analogues.md  bootstrap_methods.md  bootstrap_problem.md  censorship_region_notes.md  common_features.md  implementation_bootstrap.md  killer_features.md  power_roadmap.md  protocols_obfuscation.md  research.md  vless_obfuscation_strategy.md
raycaster_demo/: Cargo.toml
rsync-rs/: Cargo.toml
rsync-rs/docs/: analogs_common_features.md  best_practices.md  feature_ideas.md  implementation_plan.md  killer_features.md  rust_libraries.md
rsync-rs/src/: cli.rs  config.rs  error.rs  executor.rs  filter.rs  lib.rs  main.rs  planner.rs  reporter.rs  scanner.rs
rsync-rs/tests/: sync_integration.rs
rust_shadow/: Cargo.toml
rust_shadow/src/: main.rs
rust_shadow/src/proxy/: mod.rs
rust_shadow/src/ui/: app.rs  draw.rs  mod.rs
rust_shadow/src/utils/: mod.rs
tuitools/fractal_tui/: Cargo.toml
tuitools/fractal_tui/src/: main.rs
tuitools/hex_editor/: Cargo.toml
tuitools/hex_editor/src/: app.rs  handler.rs  lib.rs  main.rs  ui.rs
tuitools/wifi_tui/: Cargo.toml
tuitools/wifi_tui/src/: main.rs
ubot/: Cargo.toml
