[package]
name = "auth_service"
version = "0.1.0"
edition = "2024"

[features]
default = ["memory"]
memory = []
sqlite = ["dep:sqlx"]
postgres = []
surrealdb = []

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1"
axum = "0.8"
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"], optional = true }
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
uuid = { version = "1", features = ["serde", "v4"] }
zeroize = "1"

[dev-dependencies]

[profile.dev]
opt-level = 0
debug = 0
incremental = true
codegen-units = 256
lto = false

[profile.release]
opt-level = 3
debug = 0
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
