[package]
name = "file_dedup"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
indicatif = { version = "0.17", features = ["rayon"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false

[profile.dev]
opt-level = 0
debug = false
incremental = true
codegen-units = 256
panic = "abort"
