[package]
name = "im-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
fast_image_resize = "3.0"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }
rayon = "1.8"
indicatif = { version = "0.17", features = ["rayon"] }
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false

[profile.dev]
opt-level = 0
debug = false
incremental = true
codegen-units = 256
panic = "abort"
