[package]
name = "quic-socks"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
quinn = { version = "0.11.9", features = ["runtime-tokio", "rustls-ring"] }
rcgen = "0.14.7"
rustls = { version = "0.23.38", features = ["ring"] }
tokio = { version = "1.52.1", features = ["full"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false

[profile.dev]
opt-level = 0
debug = false
incremental = true
codegen-units = 256
panic = "abort"
