[package]
name = "rsync-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["mimalloc-allocator"]
mimalloc-allocator = ["dep:mimalloc"]

[dependencies]
blake3 = "1"
filetime = "0.2"
mimalloc = { version = "0.1", default-features = false, optional = true }

[profile.dev]
opt-level = 0
debug = "line-tables-only"
incremental = true
codegen-units = 256

[profile.test]
opt-level = 0
debug = "line-tables-only"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
