[package]
name = "black_hole_simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
crossterm = "0.26"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false

[profile.dev]
opt-level = 0
debug = false
incremental = true
codegen-units = 256
panic = "abort"
